--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -5,18 +5,19 @@ LABEL maintainer="Eduardo Iriarte-Mendez"
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=UTC
 
+# Setup PHP, nginx and additional dependencies
 RUN apt-get update \
     && apt-get install -y gnupg ca-certificates wget zip unzip git \
     	build-essential supervisor sqlite3 curl ruby libc-dev autoconf \
     && echo "deb http://ppa.launchpad.net/ondrej/php/ubuntu focal main" > /etc/apt/sources.list.d/ppa_ondrej_php.list \
     && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys E5267A6C \
     && apt-get update \
-    && apt-get install -y nginx graphviz cron php8.0-fpm php8.0-cli \
-       php8.0-pgsql php8.0-sqlite3 php8.0-gd php8.0-curl \
-       php8.0-imap php8.0-mbstring \
-       php8.0-xml php8.0-zip php8.0-bcmath php8.0-soap \
-       php8.0-intl php8.0-readline php-msgpack php-igbinary php8.0-imagick \
-       php8.0-dev php8.0-yaml \
+    && apt-get install -y nginx graphviz cron php8.1-fpm php8.1-cli \
+       php8.1-pgsql php8.1-sqlite3 php8.1-gd php8.1-curl \
+       php8.1-imap php8.1-mbstring \
+       php8.1-xml php8.1-zip php8.1-bcmath php8.1-soap \
+       php8.1-intl php8.1-readline php-msgpack php-igbinary php8.1-imagick \
+       php8.1-dev php8.1-yaml \
     && php -r "readfile('http://getcomposer.org/installer');" | php -- --install-dir=/usr/bin/ --filename=composer \
     && mkdir -p /run/php \
     && apt-get clean \
@@ -24,35 +25,17 @@ RUN apt-get update \
     && echo "daemon off;" >> /etc/nginx/nginx.conf \
     && ln -sf /dev/stdout /var/log/nginx/access.log \
     && ln -sf /dev/stderr /var/log/nginx/error.log \
-    && sed -i 's/^;daemonize.*$/daemonize = no/g' /etc/php/8.0/fpm/php-fpm.conf \
-    && sed -i 's@^error_log.*$@error_log = /proc/self/fd/2@g' /etc/php/8.0/fpm/php-fpm.conf
+    && sed -i 's/^;daemonize.*$/daemonize = no/g' /etc/php/8.1/fpm/php-fpm.conf \
+    && sed -i 's@^error_log.*$@error_log = /proc/self/fd/2@g' /etc/php/8.1/fpm/php-fpm.conf
 
-RUN apt-get update \
-    && apt-get install -y librdkafka-dev \
-    && git clone https://github.com/arnaud-lb/php-rdkafka.git \
-    && cd php-rdkafka \
-    && phpize \
-    && ./configure \
-    && make all -j 5 \
-    && make install && \
-    { \
-        echo '' ; \
-        echo '[rdkafka]' ; \
-        echo 'extension=/php-rdkafka/modules/rdkafka.so' ; \
-    } | tee -a /etc/php/8.0/fpm/php.ini /etc/php/8.0/cli/php.ini \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+# Copy additional configs & binaries
+COPY nginx.conf supervisord.conf start-container.sh /opt/src/
+RUN cp /opt/src/nginx.conf /etc/nginx/sites-available/default \
+    && cp /opt/src/supervisord.conf /etc/supervisor/conf.d/supervisord.conf \
+    && cp /opt/src/start-container.sh /usr/bin/start-container \
+    && chmod +x /usr/bin/start-container
 
-ADD scheduler /etc/cron.d/scheduler
-RUN chmod +x /etc/cron.d/scheduler \
-    && crontab /etc/cron.d/scheduler \
-    && touch /var/log/cron.log
-
-ADD nginx.conf /etc/nginx/sites-available/default
-ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-ADD start-container.sh /usr/bin/start-container
-RUN chmod +x /usr/bin/start-container
-
+# PHP Module overrides
 RUN set -eux; \
     pecl channel-update pecl.php.net \
     && pecl install xdebug && \
@@ -73,13 +56,13 @@ RUN set -eux; \
         echo 'xdebug.profiler_output_dir=/var/www/html/xdebug_out' ; \
         echo 'xdebug.remote_port=9001' ; \
         echo 'xdebug.remote_host=10.254.254.254' ; \
-        echo 'zend_extension=/usr/lib/php/20200930/xdebug.so' ; \
-    } | tee -a /etc/php/8.0/fpm/php.ini && \
+        echo 'zend_extension=/usr/lib/php/20210902/xdebug.so' ; \
+    } | tee -a /etc/php/8.1/fpm/php.ini && \
     { \
         echo '' ; \
         echo '[xdebug]' ; \
         echo 'xdebug.mode=coverage' ; \
-        echo 'zend_extension=/usr/lib/php/20200930/xdebug.so' ; \
-    } | tee -a /etc/php/8.0/cli/php.ini
+        echo 'zend_extension=/usr/lib/php/20210902/xdebug.so' ; \
+    } | tee -a /etc/php/8.1/cli/php.ini
 
 ENTRYPOINT ["start-container"]
